# zoo_spree

./: .gitignore  Cargo.toml  build.sh  games.md  reference.md  run.sh  settings.toml
dependencies/Box2D/Box2D/: CMakeLists.txt
dependencies/Box2D/Box2D/Box2D/: CMakeLists.txt
dependencies/rust_box2d/: build_frontend.rs
models/: arrow_head.stl  circle.stl  square.stl
src/: config.rs  draw.rs  input.rs  main.rs  physics.rs
src/game/: draw.rs  minigame.rs  mod.rs
src/game/minigames/: box2d.rs  mod.rs  sumo.rs  triangle.rs  triangle_buffers.rs  triangle_shader.rs
src/shader/: triangle_120.glslv  triangle_150.glslv
