[package]
name = "zoo_spree"
version = "0.1.0"
authors = ["Pat Goebel <putterson@gmail.com>"]

[dependencies]
sdl2 = "0.29"
gfx = { path = "dependencies/gfx/src/render" }
gfx_core =  { path = "dependencies/gfx/src/core" }
gfx_window_sdl = { path = "dependencies/gfx/src/window/sdl" }
gfx_device_gl = { path = "dependencies/gfx/src/backend/gl" }
cgmath = "0.14"
log = "0.3"
env_logger = "*"
toml = "0.4"
serde = "*"
serde_derive = "*"
wrapped2d = { path = "dependencies/rust_box2d"}
stl = "0.2.0"
